name:                matt-of-the
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/matt-noonan/storm-country
license:             BSD3
license-file:        LICENSE
author:              Matt Noonan
maintainer:          matt.noonan@gmail.com
copyright:           (c) 2017 Matt Noonan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Util.HTML
                     , Util.Reloadable
                     
                     , Site.Server
                     , Site.Subpage
                     , Site.Home
                     , Site.Blog
                     , Site.CV
                     
                     , Site.Data.Config
                     , Site.Data.Blog
                     , Site.Data.CV
                     
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , happstack-lite
                     , happstack-server
                     , text
                     , lucid
                     , uuid
                     , bytestring
                     , transformers
                     , random
                     , time
                     , time-compat
                     , directory
                     , process
                     , markdown
                     , blaze-html
                     , containers
                     , aeson
                     , yaml

executable storm-country
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , storm-country
  default-language:    Haskell2010

test-suite storm-country-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , storm-country
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matt-noonan/storm-country
